Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2018-07-12)
------------------

- Allow to impersonate another user.
  [buchi]


1.0.1 (2018-04-16)
------------------

- Switch to `ipaddress` module instead of `py2-ipaddress` for IP range
  parsing, and fix unicode handling.
  [lgraf]


1.0.0 (2018-04-04)
------------------

- Initial implementation
  [lgraf]